2001-10-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix: New testsuite directory.

2001-10-14  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-sh/sub2l-1.d, ld-sh/shared-1.d, ld-sh/weak1.d: Only run on
	sh*-*-elf.

	* lib/ld-lib.exp (run_dump_test): Fix typo: asflags(), not asflags{}.

	* ld-sh/rd-sh.exp: New framework file.
	* ld-sh/ld-r-1.d, ld-sh/ldr1.s, ld-sh/ldr2.s, ld-sh/shared-1.d,
	ld-sh/weak1.s, ld-sh/weak1.d, ld-sh/sub2l.s, ld-sh/sub2l-1.d: New
	test files.

2001-09-29  Hans-Peter Nilsson  <hp@axis.com>

	* ld-linkonce/linkonce.exp: New file.
	* ld-linkonce/x.s, ld-linkonce/y.s, ld-linkonce/zeroeh.ld,
	ld-linkonce/zeroehl32.d: New test.

2001-09-25  H.J. Lu  <hjl@gnu.org>

	* ld-elfweak/dso.dsym: Updated for alpha.
	* ld-elfweak/dsodata.dsym: Likewise.
	* ld-elfweak/strong.sym: Likewise.
	* ld-elfweak/strongcomm.sym: Likewise.
	* ld-elfweak/strongdata.sym: Likewise.

2001-09-15  Hans-Peter Nilsson  <hp@bitrange.com>

	* lib/ld-lib.exp (run_dump_test): Handle new option
	"objcopy_linked_file".  Return after failing, if errors were
	expected but none were found.
	(slurp_options): Support underscores in option names.

2001-09-14  H.J. Lu  <hjl@gnu.org>

	* ld-elfweak/bar.c: Updated.
	* ld-elfweak/bar1a.c: Likewise.
	* ld-elfweak/main.c: Likewise.
	* ld-elfweak/main1.c: Likewise.
	* ld-elfweak/elfweak.exp: Likewise.
	* ld-elfweak/weakdata.dsym: Updated.

2001-09-11  H.J. Lu  <hjl@gnu.org>

	* ld-elfweak/elfweak.exp (build_lib): Take a list of object
	files.
	(build_exec): Likewise.
	Add more tests and make some xfail.

	* ld-elfweak/dso.dsym: Support symbol versioning.
	* ld-elfweak/dsow.dsym: Likewise.

	* ld-elfweak/main1.c: New.
	* ld-elfweak/bar1a.c: Likewise.
	* ld-elfweak/bar1b.c: Likewise.
	* ld-elfweak/bar1c.c: Likewise.
	* ld-elfweak/foo1a.c: Likewise.
	* ld-elfweak/foo1b.c: Likewise.
	* ld-elfweak/dsodata.dsym: Likewise.
	* ld-elfweak/dsowdata.dsym: Likewise.
	* ld-elfweak/weakdata.dsym: Likewise.
	* ld-elfweak/strongcomm.sym: Likewise.