@@ -21,7 +21,6 @@ SYMBOL TABLE:
 0+4 g       \.text Main
 0+4 g       \.text a
 
-
 Contents of section \.text:
  0000 e3fd0001 e3fd0004                    .*
 Contents of section \.data:
