@@ -10,6 +10,5 @@
 SYMBOL TABLE:
 0+4 g       \.text Main
 
-
 Contents of section \.text:
  0000 e3fd0001 e3fd0004                    .*
