@@ -3,4 +3,3 @@
 % symbols (if that is actually valid).
  .text
  .byte 0x98,0x0b,0x00,0x00,0x98,0x0c,0x00,0x00
-
