@@ -1,4 +1,3 @@
  LOC #20 << 56 + #200
 dloc1 TETRA 4,5,6
  .global dloc1
-
