@@ -1,4 +1,3 @@
  LOC #1000
 loc1 SWYM 3,3,3
  .global loc1
-
