@@ -1,4 +1,3 @@
  LOC #2000
 loc2 SWYM 3,2,3
  .global loc2
-
