@@ -15,4 +15,3 @@ Contents of section \.text:
  1000 fd030303 e3fd0001                    .*
 Contents of section \.data:
  0004 00001030                             .*
-
