@@ -13,9 +13,7 @@ SYMBOL TABLE:
 0+fc g       \*ABS\* ext1
 0+4 g       \.text _start
 
-
 Contents of section \.text:
  0000 fd030201 e3fd0001                    .*
 Contents of section \.MMIX\.reg_contents:
  07e8 00000000 0000004e 00000000 0000004e  .*
-
