@@ -1,4 +1,3 @@
  LOC  #1002
 t SWYM
  TETRA t
-
